<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp">

    <!-- Top-left decorative circle -->

    <!-- Piggy illustration -->

    <ImageView
        android:id="@+id/bgCircle"
        android:layout_width="134dp"
        android:layout_height="126dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="-2dp"
        android:scaleType="fitXY"
        android:src="@drawable/splash_image_1"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/piggyImage"
        android:layout_width="220dp"
        android:layout_height="202dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/piggy_bank_illustration"
        android:src="@drawable/splash_image_3" />

    <!-- Title -->
    <TextView
        android:id="@+id/splashTitle"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@id/piggyImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/saving_for_your_future"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Description -->
    <TextView
        android:id="@+id/splashDesc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/goodbudget_is_more_than_a_tool_it_s_the_daily_habit_that_empowers_you_to_take_control_stay_focused_and_turn_your_financial_goals_into_lasting_achievements"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_below="@id/splashTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <!-- CTA Button -->
    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/let_s_get_started"
        android:layout_below="@id/splashDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFB74D"
        android:textColor="#FFFFFF"/>
</RelativeLayout>
